--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Valorant Champions</title>
-    <meta name="description" content="Stay updated with the latest news and updates about Valorant Champions.">
+    <meta name="description" content="Stay updated with the latest news and updates about Valorant Champions." />
+    <link rel="stylesheet" href="bootstrap-5.3.8-dist/css/bootstrap.min.css">
 </head>
 <body>
     <header>
@@ -260,6 +261,6 @@
                         <small>2024 Valorant Champions - pagina fanmade</small>
                     </p>
                 </footer>
-
+                <script src="/bootstrap-5.3.8-dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
