First grid with bootstrap (row, col)

--- a/index.html
+++ b/index.html
@@ -48,39 +48,41 @@
             <!-- Layout de contenido + sidebar -->
 
             <section aria-labelledby="titulo-resumen">
-                <header>
+                <header class="container">
                     <h2 id="titulo-resumen">Resumen Rapido</h2>
                     <p>Este es un resumen rápido sobre el torneo Valorant Champions.</p>
                 </header>
 
-                <div>
-                    <!-- columna principal -->
-                     <article aria-labelledby="Titulo-de-origen">
-                        <h3 id="Titulo-Historia">Origen de la historia de la VCT</h3>
-                        <p>La VCT (Valorant Champions Tour) es un torneo profesional de Valorant 
-                            organizado por Riot Games.Su objetivo es determinar el mejor equipo de 
-                            Valorant a nivel mundial, Valorant vende armas en conmemoracion sobre
-                            el torneo son skins de vandal o phantom y una melee que guardan una 
-                            sorpresa :3.</p>
-                     </article>
+                <div class="container">
+                    <div class="row">
+                        <!-- columna principal -->
+                        <article class="col-12 col-md-4" aria-labelledby="Titulo-de-origen">
+                            <h3 id="Titulo-Historia">Origen de la historia de la VCT</h3>
+                            <p>La VCT (Valorant Champions Tour) es un torneo profesional de Valorant 
+                                organizado por Riot Games.Su objetivo es determinar el mejor equipo de 
+                                Valorant a nivel mundial, Valorant vende armas en conmemoracion sobre
+                                el torneo son skins de vandal o phantom y una melee que guardan una 
+                                sorpresa :3.</p>
+                        </article>
 
-                    <!-- Sidebar -->
-                        <aside aria-labelledby="titulo-Ficha">
-                            <h3 id="titulo-Ficha">Datos Rapidos</h3>
-                            <ul>
-                                <li><strong>Primer torneo:</strong> 2021</li>
-                                <li><strong>Equipos participantes:</strong> 16</li>
-                                <li><strong>Premio total:</strong> $1,000,000</li>
-                                <li><strong>Campeón actual:</strong> Team Sentinels</li>
-                            </ul>
+                        <!-- Sidebar -->
+                            <aside class="col-12 col-md-4" aria-labelledby="titulo-Ficha">
+                                <h3 id="titulo-Ficha">Datos Rapidos</h3>
+                                <ul>
+                                    <li><strong>Primer torneo:</strong> 2021</li>
+                                    <li><strong>Equipos participantes:</strong> 16</li>
+                                    <li><strong>Premio total:</strong> $1,000,000</li>
+                                    <li><strong>Campeón actual:</strong> Team Sentinels</li>
+                                </ul>
 
-                            <section aria-labelledby="Titulo-Dato">
-                                <h4 id="Titulo-Dato">Dato Curioso</h4>
-                                <p>El torneo Valorant Champions ha sido uno de los eventos de esports 
-                                    de más rápido crecimiento, atrayendo a millones de espectadores 
-                                    en todo el mundo.</p>
-                            </section>
-                        </aside>
+                                <section aria-labelledby="Titulo-Dato">
+                                    <h4 id="Titulo-Dato">Dato Curioso</h4>
+                                    <p>El torneo Valorant Champions ha sido uno de los eventos de esports 
+                                        de más rápido crecimiento, atrayendo a millones de espectadores 
+                                        en todo el mundo.</p>
+                                </section>
+                            </aside>
+                    </div>
                 </div>
             </section>
 
