--- a/index.html
+++ b/index.html
@@ -36,19 +36,23 @@
     <main id="contenido">
         <!-- Seccion Hero -->
             <section id="index" aria-label="Inicio-titulo">
-                <div class="container">
-                <header>
-                    <h2 id="incio-titulo">Inicio</h2>
-                    <p>Bienvenido a la página oficial de Valorant Champions. Aquí encontrarás toda la información relevante sobre los torneos, equipos y jugadores destacados en el mundo de Valorant.</p>
+                <div class="container py-5">
+                <header class="mb-4">
+                    <h2 id="incio-titulo" class="display-5 fw-bold">Bienvenido fan aqui hablamos sobre la VCT</h2>
+                    <p class="lead">Bienvenido a la página oficial de Valorant Champions. Aquí encontrarás toda la información relevante sobre los torneos, equipos y jugadores destacados en el mundo de Valorant.</p>
                 </header>
-                <figure>
-                    <img src="Img/Valorant Champions 2O24.jpg" alt="Valorant Champions 2024">
+                <figure class="mb-4">
+                    <img src="Img/Valorant Champions 2O24.jpg" 
+                    class="img-fluid rounded"
+                    alt="Valorant Champions 2024">
                     <figcaption>Valorant Champions 2024</figcaption>
                 </figure>
 
                 <p>
-                    <a href="#Noticias">Ver las noticias</a>
-                    <a href="#Equipos">Ver los equipos</a>
+                    <a href="#Noticias" 
+                    class="btn btn-primary me-2">Ver las noticias</a>
+                    <a href="#Equipos"
+                    class="btn btn-outline-secondary">Ver los equipos</a>
 
                 </p>
                 </div>
