Card in articles

--- a/index.html
+++ b/index.html
@@ -121,19 +121,36 @@
 
             <!-- armas -->
              <section id="armas" aria-labelledby="titulo de armas">
-                <div class="container">
-                <header>
+                <div class="container py-5">
+                <header class="mb-4 ">
                     <h2 id="titulo de armas">Armas</h2>
                 </header>
-                <div class="container">
-                    <article aria-labelledby="titulo-vandal">
-                        <h3 id="titulo-vandal">Vandal</h3>
-                        <p>El Vandal es una de las armas más populares en Valorant, conocida por su alta precisión y daño consistente a cualquier distancia. Es la elección preferida por muchos jugadores profesionales en el torneo Valorant Champions.</p>
+                <div class="row g-3">
+                    <article class="col-12 col-md-4" aria-labelledby="titulo-vandal">
+                        <div class="card h-100">
+                            <div class="card-body">
+                        <h3 class="card-tittle h5" id="titulo-vandal">Vandal</h3>
+                        <p class="card-text">El Vandal es una de las armas más populares en Valorant, conocida por su alta precisión y daño consistente a cualquier distancia. Es la elección preferida por muchos jugadores profesionales en el torneo Valorant Champions.</p>
+                    </div>    
+                    </div>
                     </article>
 
-                    <article aria-labelledby="titulo-phantom">
-                        <h3 id="titulo-phantom">Phantom</h3>
-                        <p>El Phantom es otra arma favorita en Valorant, apreciada por su versatilidad y capacidad para adaptarse a diferentes estilos de juego. Su silenciador integrado lo hace ideal para enfrentamientos tácticos durante los partidos del torneo.</p>
+                    <article class="col-12 col-md-4" aria-labelledby="titulo-phantom">
+                        <div class="card h-100">
+                            <div class="card-body">
+                        <h3 class="card-tittle h5" id="titulo-phantom">Phantom</h3>
+                        <p class="card-text">El Phantom es otra arma favorita en Valorant, apreciada por su versatilidad y capacidad para adaptarse a diferentes estilos de juego. Su silenciador integrado lo hace ideal para enfrentamientos tácticos durante los partidos del torneo.</p>
+                    </div>    
+                    </div>
+                    </article>
+
+                    <article class="col-12 col-md-4" aria-labelledby="titulo-OP">
+                        <div class="card h-100">
+                            <div class="card-body">
+                        <h3 class="card-tittle h5" id="titulo-OP">OP</h3>
+                        <p class="card-text">El OP es otra arma favorita en Valorant, Es un francotirador demaisado bueno ya que te permite adaptarse al campo de batalla</p>
+                    </div>    
+                    </div>
                     </article>
                 </div>
                 </div>
@@ -196,18 +213,18 @@
                 </header>
 
                 <div>
-                    <figure>
-                        <img src="Img/Vandal del 2023.jpg" alt="Imagen del torneo Valorant Champions 2024">
-                        <figcaption>Vandal del 2023</figcaption>
+                    <figure class="mb-4">
+                        <img src="Img/Vandal del 2023.jpg" class="img-fluid rounded" alt="Imagen del torneo Valorant Champions 2024">
+                        <figcaption>Vandal del 2023</figcaption> 
                     </figure>
                     
-                    <figure>
-                        <img src="Img/vandal del 2021.jpg" alt="Imagen del torneo Valorant Champions 2024">
+                    <figure class="mb-4">
+                        <img src="Img/vandal del 2021.jpg" class="img-fluid rounded" alt="Imagen del torneo Valorant Champions 2024">
                         <figcaption>Vandal del 2021</figcaption>
                     </figure>
                     
-                    <figure>
-                        <img src="Img/vandal del 2025.jpg" alt="Imagen del torneo Valorant Champions 2024">
+                    <figure class="mb-4">
+                        <img src="Img/vandal del 2025.jpg" class="img-fluid rounded" alt="Imagen del torneo Valorant Champions 2024">
                         <figcaption>Vandal del 2025</figcaption>
                     </figure>
                 </div>
