--- a/index.html
+++ b/index.html
@@ -120,10 +120,10 @@
             </section>
 
             <!-- armas -->
-             <section id="armas" aria-labelledby="titulo de armas">
+             <section id="armas" aria-labelledby="titulo-de-armas">
                 <div class="container py-5">
                 <header class="mb-4 ">
-                    <h2 id="titulo de armas">Armas</h2>
+                    <h2 id="titulo-de-armas">Armas</h2>
                 </header>
                 <div class="row g-3">
                     <article class="col-12 col-md-4" aria-labelledby="titulo-vandal">
@@ -237,19 +237,19 @@
             
             <!-- FAQ con ditalis y summary --> 
             <section id="faq" aria-labelledby="titulo-faq">
-                <header class="container">
+                <header class="container py-5">
                     <h2 id="titulo-faq">Preguntas Frecuentes</h2>
-                    <details>
-                        <summary>¿Cuándo se celebra el próximo torneo Valorant Champions?</summary>
-                        <p>El próximo torneo está programado para noviembre de 2026.</p>
+                    <details class="border rounded p-3 mb-3">
+                        <summary class="fw-semibold">¿Cuándo se celebra el próximo torneo Valorant Champions?</summary>
+                        <p class="mt-2 mb-0 text-muted">El próximo torneo está programado para noviembre de 2026.</p>
                     </details>
-                    <details>
-                        <summary>¿Cómo puedo ver los partidos en vivo?</summary>
-                        <p>Los partidos se transmiten en vivo a través de plataformas como Twitch y YouTube.</p>
+                    <details class="border rounded p-3 mb-3">
+                        <summary class="fw-semibold">¿Cómo puedo ver los partidos en vivo?</summary>
+                        <p class="mt-2 mb-0 text-muted">Los partidos se transmiten en vivo a través de plataformas como Twitch y YouTube.</p>
                     </details>
-                    <details>
-                        <summary>¿Cuántos equipos participan en el torneo?</summary>
-                        <p>Un total de 16 equipos de todo el mundo compiten en el torneo.</p>
+                    <details class="border rounded p-3 mb-3">
+                        <summary class="fw-semibold">¿Cuántos equipos participan en el torneo?</summary>
+                        <p class="mt-2 mb-0 text-muted">Un total de 16 equipos de todo el mundo compiten en el torneo.</p>
                     </details>
                 </header>
              </section>
