--- a/index.html
+++ b/index.html
@@ -256,40 +256,44 @@
 
              <!-- Contacto -->
                 <section class="container" id="Contacto" aria-labelledby="titulo-contacto">
-                    <header>
+                    <div class="container py">
+                    <header class="mb-4">
                         <h2 id="titulo-contacto">Contacto</h2>
-                        <p>Si tienes alguna pregunta o deseas más información, no dudes en contactarnos a través del siguiente formulario:</p>
+                        <p class="text-muted"> Si tienes alguna pregunta o deseas más información, no dudes en contactarnos a través del siguiente formulario:</p>
                     </header>
                     <form action="#" method="post">
                         <fieldset>
                             <legend>Escribenos</legend>
-                        <p>
-                            <label for="nombre">Nombre:</label>
-                            <input type="text" id="nombre" name="nombre" required>
-                        </p>
-                        <p>
-                            <label for="email">Correo Electrónico:</label>
-                            <input type="email" id="email" name="email" required>
-                        </p>
-                        <p>
-                            <label for="tema">Tema:</label> <br>
-                            <select id="tema" name="tema" required>
+                            <div class="row g-3">
+                        <div class="col-12 col-md-6">
+                            <label for="nombre" class="form-label">Nombre:</label>
+                            <input type="text" id="nombre" name="nombre" class="form-control" required>
+                        </div>
+                        <div class="col-12 col-md-6">
+                            <label for="email" class="form-label">Correo Electrónico:</label>
+                            <input type="email" id="email" name="email" class="form-control" required>
+                        </div>
+                        <div class="col-12 col-md-6">
+                            <label for="tema" class="form-label">Tema:</label> <br>
+                            <select id="tema" name="tema" class="form-select" required>
                                 <option value="">--Selecciona un tema--</option>
                                 <option value="general">Consulta General</option>
                                 <option value="skins">Como comprar las skins</option>
                                 <option value="sugerencias">Sugerencias</option>
                             </select>
-                        </p>
-                        <p>
-                            <label for="mensaje">Mensaje:</label> <br>
-                            <textarea id="mensaje" name="mensaje" rows="10" cols="30" required></textarea>
-                        </p>
-                        <p>
-                            <button type="submit">Enviar</button>
-                            <button type="reset">Borrar</button>
-                        </p>
+                        </div>
+                        <div class="col-12">
+                            <label for="mensaje" class="form-label">Mensaje:</label> <br>
+                            <textarea id="mensaje" name="mensaje" rows="10" class="form-control" required></textarea>
+                        </div>
+                        <div class="col-12">
+                            <button type="submit" class="btn btn-primary me-2">Enviar</button>
+                            <button type="reset" class="btn btn-outline-danger">Borrar</button>
+                        </div>
+                        </div>
                         </fieldset>
                     </form>
+                    </div>
                     </section>
     
     
