--- a/index.html
+++ b/index.html
@@ -301,17 +301,21 @@
         </main>
 
                 <!-- pie de  pagina -->
-                <footer>
-                    <nav aria-labelledby="Enlaces del footer">
-                        <ul>
-                            <li><a href="#inicio">Inicio</a></li>
-                            <li><a href="#contacto">Contacto</a></li>
-                            <li><a href="#faq">Preguntas Frecuentes</a></li>
-                        </ul>
-                    </nav>
-                    <p>
-                        <small>2024 Valorant Champions - pagina fanmade</small>
-                    </p>
+                <footer class="bg-light mt-5">
+                    <div class="container py-4 text-center">
+                        <div class="row align-items-center">
+                                <nav class="col-12 col-md-6" aria-labelledby="Enlaces del footer">
+                                    <ul class="list-unstyled mb-0">
+                                        <li><a href="#inicio" class="text-decoration-none">Inicio</a></li>
+                                        <li><a href="#contacto" class="text-decoration-none">Contacto</a></li>
+                                        <li><a href="#faq" class="text-decoration-none">Preguntas Frecuentes</a></li>
+                                    </ul>
+                                </nav>
+                                <div class="col-12 col-md-6 text-md-end">
+                                    <small class="text-muted">©2024 Valorant Champions - pagina fanmade</small>
+                                </div>
+                            </div>
+                    </div>
                 </footer>
                 <script src="/bootstrap-5.3.8-dist/js/bootstrap.bundle.min.js"></script>
 </body>
