--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Valorant Champions</title>
     <meta name="description" content="Stay updated with the latest news and updates about Valorant Champions." />
     <link rel="stylesheet" href="bootstrap-5.3.8-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
     <header>
@@ -127,7 +128,7 @@
                 </header>
                 <div class="row g-3">
                     <article class="col-12 col-md-4" aria-labelledby="titulo-vandal">
-                        <div class="card h-100">
+                        <div class="card h-100 shadow-sm transition">
                             <div class="card-body">
                         <h3 class="card-tittle h5" id="titulo-vandal">Vandal</h3>
                         <p class="card-text">El Vandal es una de las armas más populares en Valorant, conocida por su alta precisión y daño consistente a cualquier distancia. Es la elección preferida por muchos jugadores profesionales en el torneo Valorant Champions.</p>
@@ -136,7 +137,7 @@
                     </article>
 
                     <article class="col-12 col-md-4" aria-labelledby="titulo-phantom">
-                        <div class="card h-100">
+                        <div class="card h-100 shadow-sm transition">
                             <div class="card-body">
                         <h3 class="card-tittle h5" id="titulo-phantom">Phantom</h3>
                         <p class="card-text">El Phantom es otra arma favorita en Valorant, apreciada por su versatilidad y capacidad para adaptarse a diferentes estilos de juego. Su silenciador integrado lo hace ideal para enfrentamientos tácticos durante los partidos del torneo.</p>
@@ -145,7 +146,7 @@
                     </article>
 
                     <article class="col-12 col-md-4" aria-labelledby="titulo-OP">
-                        <div class="card h-100">
+                        <div class="card h-100 shadow-sm transition">
                             <div class="card-body">
                         <h3 class="card-tittle h5" id="titulo-OP">OP</h3>
                         <p class="card-text">El OP es otra arma favorita en Valorant, Es un francotirador demaisado bueno ya que te permite adaptarse al campo de batalla</p>
@@ -215,19 +216,19 @@
                 <div class="row g-3">
                     <figure class="col-12 col-sm-6 col-md-4 mb-4">
                         <img src="Img/Vandal del 2023.jpg" class="img-fluid rounded" alt="Imagen del torneo Valorant Champions 2024"
-                        class="img-fluid rounded">
+                        class="img-fluid rounded shadow-sm transition">
                         <figcaption class="mt-2 text-center">Vandal del 2023</figcaption> 
                     </figure>
                     
                     <figure class="col-12 col-sm-6 col-md-4 mb-4">
                         <img src="Img/vandal del 2021.jpg" class="img-fluid rounded" alt="Imagen del torneo Valorant Champions 2024"
-                        class="img-fluid rounded">
+                        class="img-fluid rounded shadow-sm transition">
                         <figcaption class="mt-2 text-center">Vandal del 2021</figcaption>
                     </figure>
                     
                     <figure class="col-12 col-sm-6 col-md-4 mb-4">
                         <img src="Img/vandal del 2025.jpg" class="img-fluid rounded" alt="Imagen del torneo Valorant Champions 2024"
-                        class="img-fluid rounded">
+                        class="img-fluid rounded shadow-sm transition">
                         <figcaption class="mt-2 text-center">Vandal del 2025</figcaption>
                     </figure>
                 </div>
@@ -239,15 +240,15 @@
             <section id="faq" aria-labelledby="titulo-faq">
                 <header class="container py-5">
                     <h2 id="titulo-faq">Preguntas Frecuentes</h2>
-                    <details class="border rounded p-3 mb-3">
+                    <details class="border rounded p-3 mb-3 shadow-sm transition">
                         <summary class="fw-semibold">¿Cuándo se celebra el próximo torneo Valorant Champions?</summary>
                         <p class="mt-2 mb-0 text-muted">El próximo torneo está programado para noviembre de 2026.</p>
                     </details>
-                    <details class="border rounded p-3 mb-3">
+                    <details class="border rounded p-3 mb-3 shadow-sm transition">
                         <summary class="fw-semibold">¿Cómo puedo ver los partidos en vivo?</summary>
                         <p class="mt-2 mb-0 text-muted">Los partidos se transmiten en vivo a través de plataformas como Twitch y YouTube.</p>
                     </details>
-                    <details class="border rounded p-3 mb-3">
+                    <details class="border rounded p-3 mb-3 shadow-sm transition">
                         <summary class="fw-semibold">¿Cuántos equipos participan en el torneo?</summary>
                         <p class="mt-2 mb-0 text-muted">Un total de 16 equipos de todo el mundo compiten en el torneo.</p>
                     </details>
